fix(ui): Make header no wrap

--- a/kaeltebus-frontend/src/features/admin/AdminHome.scss
+++ b/kaeltebus-frontend/src/features/admin/AdminHome.scss
@@ -3,3 +3,6 @@
     flex-direction: column;
 }
 
+.UserMenu {
+    row-gap: 4px;
+}
