--- a/kaeltebus-frontend/src/features/operator/OperatorHome.scss
+++ b/kaeltebus-frontend/src/features/operator/OperatorHome.scss
@@ -2,3 +2,8 @@
     display: flex;
     flex-direction: column;
 }
+
+
+.UserMenu {
+    row-gap: 4px;
+}
